<resources>
    <string name="app_name">Fwknop2</string>
    <string name="title_config_detail">Config Detail</string>
    <string name="QR_Code">Capture qr</string>
    <string name="detail_help">Help</string>
    <string name="Save">Save config</string>
    <string name="Delete">Delete config</string>
    <string name="unique_nick">You Must choose a unique Nickname.</string>
    <string name="hmac64_x4">Hmac is not a valid Base64, not a multiple of 4.</string>
    <string name="hmac64_xchars">Hmac is not a valid Base64, Contains disallowed characters.</string>
    <string name="key64_x4">Key is not a valid Base64, not a multiple of 4.</string>
    <string name="key64_xchars">Key is not a valid Base64, Contains disallowed characters.</string>
    <string name="port_format">Access ports must be in the form of \'tcp/22\'</string>
    <string name="valid_ip">You Must supply a valid IP address to \'Allow IP\'.</string>
    <string name="valid_server">You Must supply a valid server address.</string>
    <string name="knock">Send knock</string>
    <string name="edit">Edit config</string>
    <string name="write_nfc_tag">Write to NFC tag</string>
    <string name="juice_first">A connection must be saved in Juicessh before being used here.</string>
    <string name="blank_key">Key cannot be blank.</string>
    <string name="Rijndael_Key">Rijndael Key</string>
    <string name="saving">Saving config</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sending">Sending&#8230;</string>
    <string name="new_config">New config</string>
    <string name="juice_permissions">Fwknop2 does not have permission to access Juicessh connection list.</string>
    <string name="juice_permissions_reinstall">Fwknop2 does not have permission to access Juicessh connection list. Please reinstall Fwknop2.</string>
    <string name="description_short">A new fwknop client to send SPA packets to an fwknopd server</string>
    <string name="description_long">Fwknop2 allows you to send spa packets to an fwknopd service to remotely open ports on a Linux machine or a router running OpenWrt.
        Fwknop2 has the ability to launch an ssh client to start the login process through the newly opened port.
        It also includes the ability to import keys via QR codes.</string>

    <string-array name="spinner_protocol">
        <item>UDP</item>
        <item>TCP</item>
        <item>HTTP</item>
    </string-array>
    <string-array name="spinner_digest_type">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA384</item>
        <item>SHA512</item>
    </string-array>
    <string-array name="spinner_options">
        <item>Resolve IP</item>
        <item>Source IP</item>
        <item>Allow IP</item>
        <item>Prompt IP</item>
    </string-array>
    <string-array name="configtype_options">
        <item>Open Port</item>
        <item>Nat Access</item>
        <item>Local Nat Access</item>
        <item>Server Command</item>
    </string-array>
    <string-array name="ssh_options">
        <item>None</item>
        <item>SSH Uri</item>
        <item>OpenVPN for Android</item>
        <item>Juicessh</item>
    </string-array>
    <string name="help_page">
 <![CDATA[
 <p>
 Welcome to fwknop2! This app is for the sending of SPA Packets to a Linux host or router, mainly
 for opening ports in an iptables firewall. More info
 <a href="https://www.cipherdyne.org/fwknop/">at the Cipherdyne web site</a>.
 </p>
 <p>
 Get started by selecting "New Config" from the menu, and then filling in at least "Nickname", "Server Address",
 and "Rijndael Key." It is also recommended to set an "HMAC Key" as well for strong authentication of SPA packets.
 If you are using luci-app-fwknop on an Openwrt router, you can select the "Capture qr" option from the menu,
 and use a qr code generated on the router to auto fill the encryption and HMAC keys.
  </p>
 <p>
 If Juicessh is installed, you can autostart a saved Juicessh connection by selecting Juicessh from the
 "Run External App" menu, and after a brief delay, choosing the desired connection. If you want to use a different
 app, select "SSH Uri", and then type in your desired Username to connect as. This will use the system\'s
 default ssh client to try to connect to the port you are opening.
 </p>
 <p>
 Another option in the External App menu is "OpenVPN for Android".  Selecting this option and
 filling in a profile name will automatically launch that profile after sending a successful knock.
 </p>
 <p>
 The "Allow IP" option specifies what IP to send as the source address.  The "prompt" option will ask
 for the IP to allow when a knock is sent.  This prompt has an option to scan a qr code containing an
 IP address.  This service is provided at <a href="https://qr.incom.co">https://qr.incom.co</a>.
 </p>
 <p>
  Once the data is filled in, select "Save Config" from the menu. Then, to send a SPA knock, select the
  Saved config you want to use, and tap the "Send Knock" button at the bottom of the list.
 </p>
 <p>
 From the list of saved configs, a long tap launches a context menu.  This contains the options to edit or delete a config.
 If the device contains NFC capabilities, the option to write a config to an NFC tag will also be present.
 Note that only the nickname is written to the NFC tag, which avoids exposing any credentials in the NFC tag.
 There is an option in the general configuration menu to enable sending knocks via NFC tags.  This option defaults
 to false, and any scanned NFC tag will be ignored by fwknop2 while this option is disabled.
 </p>
 <p>
 Once sending knocks via NFC is enabled, scanning an NFC token sends the associated knock.
 This process will work even if Fwknop2 is not currently opened.
 </p>
 <p>This app is open source software, Licensed GPLv2+. The source can be found  <a href="https://github.com/jp-bennett/Fwknop2">on github</a>. Please report any bugs here.</p>
 <p>Credits: Based on fwknop and libfko written by <a href="https://www.cipherdyne.org/fwknop/"> Michael Rash</a></p>
 <p>This app was written by <a href="http://incomsystems.biz/">Jonathan Bennett</a></p>
 <p>The fwknop2 icon is derived from a photo by <a href="https://www.flickr.com/photos/anemoneprojectors/5330583056/">Peter O\'Connor</a></p>

 <b>Tap the back button to get started.</b>
 </p>
 ]]>
 </string>
    <string name="config_nickname">Nickname:</string>
    <string name="config_saddress">Server Address:</string>
    <string name="config_udp_port">Server Port:</string>
    <string name="config_useGPG">Use GPG</string>
    <string name="config_rkey">Rijndael Key:</string>
    <string name="config_b64_key">Key Is Base 64</string>
    <string name="config_digest_type">SPA Digest Type</string>
    <string name="config_HMAC_type">SPA HMAC Type</string>
    <string name="config_hmackey">HMAC Key:</string>
    <string name="config_hmac64">HMAC Is Base 64</string>
    <string name="config_allowIP">Allow IP:</string>
    <string name="config_allowedIP">IP to allow:</string>
    <string name="config_mtype">Message Type:</string>
    <string name="config_Aports">Access Ports:</string>
    <string name="config_Ftimeout">Firewall Timeout:</string>
    <string name="config_Reknock">Keep open:</string>
    <string name="config_notification">Show timeout notification.</string>
    <string name="config_InternalIP">Internal IP:</string>
    <string name="config_internal_port">Internal Port:</string>
    <string name="config_cmd">Server Command:</string>
    <string name="config_ssh_app">Run External App:</string>
    <string name="config_ssh_uri">User@address:port</string>
    <string name="config_ovpn_uri">ovpn config name</string>
    <string name="config_http_url">Http or https address to query to find our IP:</string>
    <string name="config_dns">Try to retrieve our IP using dns first.</string>
    <string name="config_button_save">Save settings</string>
    <string name="configure">Configure</string>
    <string name="config_button_default">Default</string>
    <string name="error_resolve">resolve failure</string>
    <string name="success">Success!</string>
    <string name="spa_failure">Failure generating SPA data</string>
    <string name="my_ip_source_error">URL must be in the form of http://whatismyip.akamai.com or https://api.ipify.org</string>
    <string name="config_legacy">Use Legacy Mode</string>
    <string name="config_random">Use Random Server Port</string>
    <string name="config_protocol">Protocol:</string>
    <string name="menu_send_knock">Send Knock</string>
    <string name="libLoadError">Could not load libfko</string>
    <string name="HMAC_Legacy">Cannot use HMAC with legacy mode</string>
    <string name="title_activity_nfc_knock">NfcKnockActivity</string>
    <string name="setup_nfc_tag">Set up Fwknop NFC Tag</string>
    <string name="status_awaiting_tap">Tap a tag to write…</string>
    <string name="status_write_success">Success!</string>
    <string name="status_failed_to_write">Unable to write data to NFC tag. If the problem persists, try a different tag</string>
    <string name="status_tag_not_writable">NFC tag is not writable. Please use a different tag.</string>
    <string name="done_label">Done</string>
    <string name="config_nfc">Enable sending knock from NFC</string>
    <string name="nfcDisabled">NFC-Fwknop2 disabled</string>
    <string name="nfcError">NFC Tag parsing error</string>
    <string name="SendingSPATo">"Sending SPA to "</string>
    <string name="NotValidNatIP">You must supply a valid NAT IP</string>
    <string name="NotValidNatPort">You must provide a valid NAT port</string>
    <string name="no_gpg_selected">Please select gpg keys</string>
</resources>
