<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/configuration"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:textIsSelectable="true"
    android:text="@android:color/black"
    style="?android:attr/textAppearanceLarge"
    >
    <CheckBox
        android:id="@+id/chkb_nfc"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_nfc"
        />
    <CheckBox
        android:id="@+id/chkb_dns"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_dns"
        />
    <CheckBox
        android:id="@+id/chkb_notification"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_notification"
        />
    <TextView
        android:id="@+id/myip_url_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_http_url"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/myip_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:singleLine="true"
        android:inputType="textUri"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_button_save"
        android:onClick="saveSettings"
     />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_button_default"
        android:onClick="defaultSettings"
        />

</LinearLayout>